syntax = "proto3";

package com.ben.smartcv.common;

option java_package = "com.ben.smartcv.common.auth";
option java_outer_classname = "AuthServiceProto";
option java_multiple_files = true;

message IntrospectRequest {

    string token = 1;

}

message IntrospectResponse {

    bool valid = 1;

}

message PreviewUser {

    string email = 1;

    string name = 2;

}

message UserId {

    string id = 1;

}

service AuthService {

    rpc introspect(IntrospectRequest) returns (IntrospectResponse) {}

    rpc getPreviewById(UserId) returns (PreviewUser) {}

}