syntax = "proto3";

package com.ben.smartcv.common;

option java_package = "com.ben.smartcv.common.user";
option java_outer_classname = "UserEventProto";
option java_multiple_files = true;

message UserSignedUpEvent {

    string email = 1;

    string password = 2;

    string first_name = 3;

    string last_name = 4;

}
